# typescript_bazel_example

./: BUILD.bazel  WORKSPACE  package.json
src/: dependency.ts  main.ts
