package(default_visibility = ["//visibility:public"])
exports_files(["tsconfig.json"])

filegroup(name = "node_modules", srcs = glob([
    "node_modules/**/*.js",
    "node_modules/**/*.d.ts",
    "node_modules/**/*.json",
]))

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "my_code",
    srcs = glob(["src/*.ts"]),
    deps = [],
    tsconfig = "//:tsconfig.json",
)

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

nodejs_binary(
    name = "executable",
    data = [
        "//:my_code",
    ],
    entry_point = "typescript_bazel_example/src/main.js",
)
